2003-06-12	Joel Sherrill <joel@OARcorp.com>

	* src/objectmp.c: Removed warnings.

2003-03-18  Till Straumann <strauman@slac.stanford.edu>

	PR 356/bsps
	* src/threadhandlerc: This patch makes RTEMS/PowerPC eabi compliant.
	Let Thread_Handler verify that _init/_main are non-NULL
	before calling them (gives the linker script/user more
	freedom to handle special cases).

2002-03-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/system.h: Add __RTEMS_REVISION__.

2002-02-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/system.h: Add __RTEMS_MAJOR__, __RTEMS_MINOR__.

2003-01-10	Joel Sherrill <joel@OARcorp.com>

	* src/objectmp.c: Corrected use of name parameter to reflect that it
	is actually the name not a pointer to the name.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	Makefile.am: Don't create $ARCH.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	Makefile.am: Fix macro-file installation.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	Makefile.am: Move include/rtems/score/cpuopts.h to STD_H_FILES.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Remove.
	* inline/Makefile.am: Remove.
	* macros/Makefile.am: Remove.
	* src/Makefile.am: Remove.
	* Makefile.am: Merge-in removed Makefile.ams.

2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/score/object.h, include/rtems/score/tod.h:
	Added casts to eliminate warnings on 16 bit targets like the h8300.

2002-11-14	Joel Sherrill <joel@OARcorp.com>

	* macros/rtems/score/object.inl: Keep consistent with inline version.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* src/heapgetinfo.c: Fixed comment.
	* src/mpci.c: Removed warning.

2002-10-28	Joel Sherrill <joel@OARcorp.com>

	* src/threadhandler.c: Prototype _init() and _main() if they are needed
	to avoid a warning.

2002-08-14	Joel Sherrill <joel@OARcorp.com>

	* macros/rtems/score/coremsg.inl: Add <string.h> to remove warning.